--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ mongodb+srv://shivamkonkar25:BJOvCAKGI8XAIzyh@cluster0.74tq7yz.mongodb.net/?retr
 
 
 mongodb+srv://shivamkonkar25:<password>@cluster0.74tq7yz.mongodb.net/
+
+
+ERTmH.AH3.u&J9D
+
+
+VXKz3uJR4kReXtZq
