--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.3.0"
+    "express-session": "^1.17.3",
+    "mongoose": "^7.3.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
